# 3dPointSimulator

./: CMakeLists.txt  ConfigParser.cpp  ConfigParser.h  Dockerfile.dependencies  Force.cpp  Force.h  Point.cpp  Point.h  README.md  SimulationGUI.cpp  SimulationGUI.h  Simulator.cpp  Simulator.h  VTKWriter.cpp  VTKWriter.h  Vector3D.h  example.cfg  main.cpp
.github/workflows/: publish-dependencies-image.yml  test.yml
